# sp-measure

./: INSTALL  Makefile.am  README  changelog  configure.ac
debian/: changelog  control  copyright  libsp-measure-dev.examples  libsp-measure-dev.install  libsp-measure1.install  rules
doc/: Makefile.am  doxygen.conf  sp_measure_diff_sys_timestamp.3  sp_measure_get_proc_data.3
examples/: res-monitor.c
src/: Makefile.am  measure_utils.c  measure_utils.h  sp_measure.h  sp_measure_process.c  sp_measure_process.h  sp_measure_system.c  sp_measure_system.h
tests/: Makefile.am  test_sp_measure.c
tests/rootfs1/proc/: meminfo  stat
tests/rootfs1/proc/25268/: cmdline  smaps  stat  status
tests/rootfs1/sys/devices/system/cpu/cpu0/cpufreq/: cpuinfo_max_freq
tests/rootfs1/sys/devices/system/cpu/cpu0/cpufreq/stats/: time_in_state
tests/rootfs2/proc/: meminfo  stat
tests/rootfs2/proc/25268/: smaps  stat  status
tests/rootfs2/sys/devices/system/cpu/cpu0/cpufreq/stats/: time_in_state
